# words_spelling

./: .gitignore  README.md  build.sh  dev.sh  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
docs/: deploy.md
resources/wida/: listening_questions.json  reading_questions.json  speaking_questions.json  writing_questions.json
server/: .env.example  .gitignore  .railwayignore  Dockerfile  README.md  pyproject.toml  railpack.json  railway.toml  requirements.txt
server/app/: __init__.py  config.py  main.py  models.py
server/segmenters/: __init__.py  api_segmenter.py  spacy_local.py
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: create_app_icon.py  create_icons.py  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: article.rs  mod.rs  practice.rs  segment.rs  tts.rs  wida.rs
src-tauri/src/database/: mod.rs
src-tauri/src/models/: mod.rs
src/main/: main.ts
src/main/crawler/: ArticleCrawler.ts
src/main/database/: DatabaseManager.ts
src/preload/: preload.ts
src/renderer/: App.tsx
src/renderer/components/: Layout.css  Layout.tsx  VirtualKeyboard.css  VirtualKeyboard.tsx
src/renderer/pages/: ArticlesPage.css  ArticlesPage.tsx  CrawlPage.tsx  EditArticlePage.tsx  HomePage.css  HomePage.tsx  LeaderboardPage.css  LeaderboardPage.tsx  PhrasePracticePage.tsx  PracticePage.css  PracticePage.tsx  SpellingPracticePage.tsx  TypingPracticePage.tsx  WidaPage.css  WidaPage.tsx  WidaTestPage.css  WidaTestPage.tsx
src/renderer/styles/: global.css
src/renderer/types/: electron.d.ts
src/renderer/utils/: api.ts
src/types/: index.ts
src/utils/: phraseExtractor.ts
